--- a/SqlMapper/SqlMapper/SqlMapper.csproj
+++ b/SqlMapper/SqlMapper/SqlMapper.csproj
@@ -65,9 +65,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Framework\App.cs" />
+    <Compile Include="Framework\CustomAttributes\Fk.cs" />
     <Compile Include="Framework\CustomAttributes\Pk.cs" />
     <Compile Include="Framework\CustomAttributes\Table.cs" />
     <Compile Include="Framework\ISqlEnumerable.cs" />
+    <Compile Include="Framework\ISqlEnumerable_2.cs" />
     <Compile Include="Framework\Mapper.cs" />
     <Compile Include="Framework\MapTypes\MapWithFields.cs" />
     <Compile Include="Framework\MapTypes\MapWithProperrties.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="Framework\Builder.cs" />
     <Compile Include="Framework\IDataMapper.cs" />
     <Compile Include="Framework\SqlEnumerable.cs" />
+    <Compile Include="Framework\SqlEnumerable_2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Framework\SQLConnectionMan\ConnectionManager.cs" />
     <Compile Include="Framework\SQLConnectionMan\PersistentConnection.cs" />
